# ProfilerPlugin

./: .gitignore  Cargo.toml  README.md  build.bat  buildDebug.bat  buildDev.bat  buildRelease.bat
.github/: dependabot.yml
.github/workflows/: ci.yml
build_support/: plugin_cdylib_build.rs
newengine-profiler-plugin/: Cargo.toml  build.rs
newengine-profiler-plugin/assets/: default_config.json  service_description.json
newengine-profiler-plugin/src/: archive.rs  config.rs  constants.rs  lib.rs  plugin.rs  plugin_definition.rs  records.rs  report.rs  runtime.rs  scheduler.rs  service.rs  util.rs
