[package]
name = "StarProfiler"
version = "0.2.0"
edition = "2021"
description = "NewEngine profiling and diagnostics runtime plugin"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = { workspace = true }
newengine-plugin-api = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"