[package]
name = "engine-profiler-starprofiler"
version = "0.2.0"
edition = "2021"
description = "North Star profiler provider route: StarProfiler diagnostics implementation"
license = "MIT OR Apache-2.0"

[package.metadata.northstar.provider]
route = "engine.profiler.starprofiler"
install_name = "starProfiler-profiler"
implements = "engine.profiler"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = { workspace = true }
newengine-plugin-api = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"